--- a/Notes.org
+++ b/Notes.org
@@ -2,7 +2,9 @@
 
 * TODO Things to test
 - Test using text-short and intern for certain strings
-* TODO Shards need some way of making requests (get gateway, etc)
+* CANCELLED Shards need some way of making requests (get gateway, etc)
+CLOSED: [2019-02-24 Sun 18:29]
+- [ ] Instead we just pass the gateway url to shards, it never changes, so w/e
 * TODO Function to log out the bot, waiting for all stuff to end, etc
 - we'll need some control messages that tell the client to enter a loop of
   waiting for all shards to signal that they are closed.
