Implement some form of User sharing

--- a/Notes.org
+++ b/Notes.org
@@ -28,8 +28,10 @@ CLOSED: [2019-04-27 Sat 16:25]
 CLOSED: [2019-05-26 Sun 05:33]
 - Pretty much nobody cares about presences on a bot but presences take up *a
   lot* of data (Turns out they don't lol)
-* TODO Share user data
+* DONE Share user data
+CLOSED: [2019-05-27 Mon 02:58]
 instead of having a copy for each user object discord gives us.
 This is probably a much better optimisation that discarding presences.
 * TODO Migrate from Transformers and MTL to Free monads
 should be fun
+* TODO Use barbies for data that updates (w/ magic defaulting stuff for aeson idk?)
