Support Webhook endpoints

--- a/Notes.org
+++ b/Notes.org
@@ -2,8 +2,10 @@
 
 * TODO Add 'Reason' request thing
 I think a good way to do this is a wrapper request type that injects it
-* TODO Webhook endpoints
+* DONE Webhook endpoints
+CLOSED: [2020-05-04 Mon 05:41]
 * TODO Audit log model & endpoints
+* TODO Allowed mentions
 * DONE Things to test
 CLOSED: [2019-04-27 Sat 16:25]
 - Test using text-short and intern for certain strings
